--- a/doc/latex/utils_8sh.tex
+++ b/doc/latex/utils_8sh.tex
@@ -37,7 +37,9 @@ declare i \mbox{\hyperlink{utils_8sh_a1eff9a1c5942c362f2838b7d69848255}{A\+R\+R\
 \mbox{\hyperlink{group__auxiliary_functions_ga7b33b974eed52f5a62f278deebd358d3}{if\+\_\+fails}} ()
 \begin{DoxyCompactList}\small\item\em Echoes a message and exit in case of previous command failure. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{group__auxiliary_functions_gaff07c1d29d6d6a540c726948254a1764}{cleanup}} ()
-\begin{DoxyCompactList}\small\item\em Clean up all temporary files and directpries (except for Virtual\+Box build) \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Clean up all temporary files and directpries (except for Virtual\+Box build) \end{DoxyCompactList}\item 
+\mbox{\hyperlink{group__auxiliary_functions_gab259926667a3920549a7bb236fbb7ad1}{bind\+\_\+filesystem}} (root)
+\begin{DoxyCompactList}\small\item\em Bind-\/mounts the host live filesystem (proc/sys/dev/run) to a future chrooted O\+S-\/like tree of similar nature. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Variables}
 \begin{DoxyCompactItemize}
 \item 
