--- a/doc/man/man3/bug.3
+++ b/doc/man/man3/bug.3
@@ -1,9 +1,11 @@
-.TH "bug" 3 "Tue Mar 2 2021" "Version 1.0" "mkg" \" -*- nroff -*-
+.TH "bug" 3 "Mon Mar 15 2021" "Version 1.0" "mkg" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
 bug \- Bug List 
 
+.IP "\fBGlobal \fBcreate_vm\fP ()\fP" 1c
+VB bug note Unfortunately 
 .IP "\fBGlobal \fBpartition\fP ()\fP" 1c
 Same issue with mkswap and swapon\&. Cleaning VBox config/settings, syncing and a bit of sleep fixed these issues for the \fInet-setup\fP method\&. 
 .PP
