--- a/doc/latex/bug.tex
+++ b/doc/latex/bug.tex
@@ -1,7 +1,10 @@
 
 \begin{DoxyRefList}
-\item[Global \mbox{\hyperlink{group__mk_file_system_gaa9952b2711fe0413d7a0bc6639c7f5a5}{partition}} ()]\label{bug__bug000001}%
+\item[Global \mbox{\hyperlink{group__create_installer_ga629c1830d8dbae377193387edd199399}{create\+\_\+vm}} ()]\label{bug__bug000001}%
 \Hypertarget{bug__bug000001}%
+VB bug note Unfortunately 
+\item[Global \mbox{\hyperlink{group__mk_file_system_gaa9952b2711fe0413d7a0bc6639c7f5a5}{partition}} ()]\label{bug__bug000002}%
+\Hypertarget{bug__bug000002}%
 Same issue with mkswap and swapon. Cleaning V\+Box config/settings, syncing and a bit of sleep fixed these issues for the {\itshape net-\/setup} method. 
 
 However if vm type is {\itshape \textquotesingle{}headless\textquotesingle{}} the {\itshape dhcpcd} method is consistently hampered by a V\+Box bug, which is tentatively circumvented by sending a {\ttfamily controlvm keyboardputscancode 1c} instruction. Tests show that this is linked to a requested user keyboard or mouse input by the Gentoo minimal install CD. This cannot be simulated owing to the lack of /dev/uinput. The reason why user input is requested has not been found. Without it, /dev/sda2 and/or sda4 are mistakenly identified as being mounted and/or busy, while this cannot be the case. With even a single keystroke for a {\ttfamily read}command, all falls back into place. This is why using the net-\/setup script, which forces user input, circumvents the issue. This may be caused by an aging kernel and/or incompatibilities with virtualization. Using a Clone\+Zilla CD as a replacement solved the issue completely. It might be better to use a beefed-\/up Gentoo install CD. 
