--- a/doc/latex/mkgentoo_8sh.tex
+++ b/doc/latex/mkgentoo_8sh.tex
@@ -30,8 +30,12 @@ Process options, create Gentoo Virtual\+Box machine and optionally create clonez
 \begin{DoxyCompactList}\small\item\em Check commanline coherence and incompatibilities. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{group__create_installer_gad29a75dbf76ffa08bf28bf4254f234c7}{mount\+\_\+live\+\_\+cd}} ()
 \begin{DoxyCompactList}\small\item\em Mount Gentoo/\+Clonezilla live CD and unsquashfs the G\+N\+U/linux system. \end{DoxyCompactList}\item 
+\mbox{\hyperlink{mkgentoo_8sh_aa9ed49342581d0210a4e9a75c1cbbbd8}{move\+\_\+auxiliary\+\_\+files}} ()
+\item 
 \mbox{\hyperlink{group__create_installer_gac524b24b0add02df542887f9b251eb42}{make\+\_\+boot\+\_\+from\+\_\+livecd}} ()
 \begin{DoxyCompactList}\small\item\em Tweak the Gentoo minimal install CD so that the custom-\/ made shell scripts and stage3 archive are included into the squashfs filesystem. \end{DoxyCompactList}\item 
+\mbox{\hyperlink{mkgentoo_8sh_adaa4d5a23086fbb45c4ca4bf0f91424b}{prepare\+\_\+bash\+\_\+rc}} ()
+\item 
 \mbox{\hyperlink{group__create_installer_ga321673d67e2987c793505f7f323894a9}{test\+\_\+vm\+\_\+running}} (vm)
 \begin{DoxyCompactList}\small\item\em Check if VM as first named argument exists and is running. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{group__create_installer_gac4a43805e885f0c9dc375480c430ec7d}{deep\+\_\+clean}} ()
@@ -127,7 +131,7 @@ you should have at least 55 GB of free disk space in the current directory or in
 \begin{DoxyItemize}
 \item Only create the VM and virtual disk, in debug mode, without R and set new passwords, for a French-\/language platform. Use 8 cores. 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{ mkg language=fr minimal debug\_mode ncpus=8}
+\DoxyCodeLine{ mkg vm\_language=fr minimal debug\_mode ncpus=8}
 \DoxyCodeLine{nonroot\_user=ken passwd=\textcolor{stringliteral}{'util!Hx\&32F'} rootpasswd=\textcolor{stringliteral}{'Hk\_32!\_CD'} \mbox{\hyperlink{group__auxiliary_functions_gaff07c1d29d6d6a540c726948254a1764}{cleanup}}=\textcolor{keyword}{false}}
 \end{DoxyCode}
  \item Create I\+SO clonezilla image of Gentoo linux, burn it to D\+VD, create an installed OS on a U\+SB stick whose model label starts with {\itshape P\+NY} and finally create a clonezilla installer on another U\+SB stick mounted under {\ttfamily  /media/ken/\+A\+A45E } 
@@ -140,6 +144,29 @@ you should have at least 55 GB of free disk space in the current directory or in
 \end{DoxyParagraph}
 
 
+\doxysubsection{Function Documentation}
+\mbox{\Hypertarget{mkgentoo_8sh_aa9ed49342581d0210a4e9a75c1cbbbd8}\label{mkgentoo_8sh_aa9ed49342581d0210a4e9a75c1cbbbd8}} 
+\index{mkgentoo.sh@{mkgentoo.sh}!move\_auxiliary\_files@{move\_auxiliary\_files}}
+\index{move\_auxiliary\_files@{move\_auxiliary\_files}!mkgentoo.sh@{mkgentoo.sh}}
+\doxysubsubsection{\texorpdfstring{move\_auxiliary\_files()}{move\_auxiliary\_files()}}
+{\footnotesize\ttfamily move\+\_\+auxiliary\+\_\+files (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+
+
+Definition at line 1010 of file mkgentoo.\+sh.
+
+\mbox{\Hypertarget{mkgentoo_8sh_adaa4d5a23086fbb45c4ca4bf0f91424b}\label{mkgentoo_8sh_adaa4d5a23086fbb45c4ca4bf0f91424b}} 
+\index{mkgentoo.sh@{mkgentoo.sh}!prepare\_bash\_rc@{prepare\_bash\_rc}}
+\index{prepare\_bash\_rc@{prepare\_bash\_rc}!mkgentoo.sh@{mkgentoo.sh}}
+\doxysubsubsection{\texorpdfstring{prepare\_bash\_rc()}{prepare\_bash\_rc()}}
+{\footnotesize\ttfamily prepare\+\_\+bash\+\_\+rc (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+Prepare the .bashrc file by exporting the environment this will be placed under /root in the VM 
+
+Definition at line 1146 of file mkgentoo.\+sh.
+
+
+
 \doxysubsection{Variable Documentation}
 \mbox{\Hypertarget{mkgentoo_8sh_a93f04e4165d1e26b707af12275800ef3}\label{mkgentoo_8sh_a93f04e4165d1e26b707af12275800ef3}} 
 \index{mkgentoo.sh@{mkgentoo.sh}!ISOLINUX\_DIR@{ISOLINUX\_DIR}}
@@ -149,7 +176,7 @@ you should have at least 55 GB of free disk space in the current directory or in
 
 
 
-Definition at line 802 of file mkgentoo.\+sh.
+Definition at line 950 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{mkgentoo_8sh_a99fb68646489d046faa1a0478d7c8e76}\label{mkgentoo_8sh_a99fb68646489d046faa1a0478d7c8e76}} 
 \index{mkgentoo.sh@{mkgentoo.sh}!LOG@{LOG}}
@@ -159,7 +186,7 @@ Definition at line 802 of file mkgentoo.\+sh.
 
 
 
-Definition at line 275 of file mkgentoo.\+sh.
+Definition at line 279 of file mkgentoo.\+sh.
 
 \mbox{\Hypertarget{mkgentoo_8sh_ad1451b50408769582d8f5bd4254fe7b1}\label{mkgentoo_8sh_ad1451b50408769582d8f5bd4254fe7b1}} 
 \index{mkgentoo.sh@{mkgentoo.sh}!PATH@{PATH}}
@@ -169,5 +196,5 @@ Definition at line 275 of file mkgentoo.\+sh.
 
 
 
-Definition at line 1158 of file mkgentoo.\+sh.
+Definition at line 1357 of file mkgentoo.\+sh.
 
