--- a/doc/man/man3/createInstaller.3
+++ b/doc/man/man3/createInstaller.3
@@ -1,4 +1,4 @@
-.TH "createInstaller" 3 "Tue Mar 2 2021" "Version 1.0" "mkg" \" -*- nroff -*-
+.TH "createInstaller" 3 "Mon Mar 15 2021" "Version 1.0" "mkg" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -176,13 +176,13 @@ Installing the guest additions is a prerequisite to folder sharing between the I
 .PP
 
 .PP
-Definition at line 1751 of file mkgentoo\&.sh\&.
+Definition at line 1994 of file mkgentoo\&.sh\&.
 .SS "bind_mount_clonezilla_iso ()"
 
 .PP
 Fetches the clonezilla ISO\&. mount it to mnt, rsync it to mnt2 and ISOFILES bind-mount mnt2 live filesystem after unsquashfs\&. 
 .PP
-Definition at line 1822 of file mkgentoo\&.sh\&.
+Definition at line 2065 of file mkgentoo\&.sh\&.
 .SS "build_virtualbox ()"
 
 .PP
@@ -220,7 +220,7 @@ build vbox-img beforehand\&.
 .PP
 
 .PP
-Definition at line 1520 of file mkgentoo\&.sh\&.
+Definition at line 1755 of file mkgentoo\&.sh\&.
 .SS "clone_vm_to_raw ()"
 
 .PP
@@ -233,7 +233,7 @@ VBoxManage clonemedium
 .PP
  to clone VDI to RAW file before bare-metal copy to device\&. 
 .PP
-Definition at line 1567 of file mkgentoo\&.sh\&.
+Definition at line 1802 of file mkgentoo\&.sh\&.
 .SS "clonezilla_device_to_image ()"
 
 .PP
@@ -246,7 +246,7 @@ Create CloneZilla xz-compressed image out of an external block device (like a US
 .PP
 
 .PP
-Definition at line 1897 of file mkgentoo\&.sh\&.
+Definition at line 2135 of file mkgentoo\&.sh\&.
 .SS "clonezilla_to_iso (iso, dir)"
 
 .PP
@@ -266,7 +266,7 @@ ISO can be burned to DVD or used to create a bootable USB stick using dd on *nix
 .PP
 
 .PP
-Definition at line 1701 of file mkgentoo\&.sh\&.
+Definition at line 1944 of file mkgentoo\&.sh\&.
 .SS "create_device_system (Mode)"
 
 .PP
@@ -291,7 +291,7 @@ Requires \fBhot_install\fP on command line to be activated as a security confirm
 .PP
 
 .PP
-Definition at line 1636 of file mkgentoo\&.sh\&.
+Definition at line 1871 of file mkgentoo\&.sh\&.
 .SS "create_iso_vm ()"
 
 .PP
@@ -315,7 +315,7 @@ the \fBsharedfolder\fP command may fail vith older version of VirtualBox or not 
 .PP
 
 .PP
-Definition at line 1380 of file mkgentoo\&.sh\&.
+Definition at line 1615 of file mkgentoo\&.sh\&.
 .SS "create_vm ()"
 
 .PP
@@ -336,6 +336,23 @@ Finally compact it\&.
 VM may be visible (vm type=gui) or without GUI (vm type=headless, currently to be fixed) 
 .RE
 .PP
+\fBBug\fP
+.RS 4
+VB bug note Unfortunately
+.RE
+.PP
+.PP
+.nf
+ VBoxManage modifyvm --cpu-profile host @encode
+is not fail-safe\&.
+For example, this option detects my CPU (Intel core-i7 5820K) vendor,
+model name, number of cpus etc\&. yet the list of flags is erroneous
+and does not contain flags **fma, bmi, bmi2** necessary to compile with
+@code -march=haswell 
+.fi
+.PP
+\&. The guest \fB/proc/cpuinfo\fP lacks these flags, which are listed in the host /proc/cpuinfo, so the VB flag import capability is buggy or incomplete\&. Borrowing partial solution from: https://superuser.com/questions/625648/ virtualbox-how-to-force-a-specific-cpu-to-the-guest This added code does not unfortunately enables -march=haswell (+) 
+.PP
 \fBTodo\fP
 .RS 4
 Find a way to only compact on success and never on failure of VM\&. 
@@ -345,7 +362,7 @@ Find a way to only compact on success and never on failure of VM\&.
 .PP
 
 .PP
-Definition at line 1156 of file mkgentoo\&.sh\&.
+Definition at line 1355 of file mkgentoo\&.sh\&.
 .SS "dd_to_usb ()"
 
 .PP
@@ -358,13 +375,13 @@ Used only if vbox-img (patched version) has not been built\&.
 .PP
 
 .PP
-Definition at line 1577 of file mkgentoo\&.sh\&.
+Definition at line 1812 of file mkgentoo\&.sh\&.
 .SS "deep_clean ()"
 
 .PP
 Force-clean root VirtualBox registry\&. 
 .PP
-Definition at line 1000 of file mkgentoo\&.sh\&.
+Definition at line 1187 of file mkgentoo\&.sh\&.
 .SS "delete_vm (vm, ext)"
 
 .PP
@@ -392,25 +409,25 @@ Deletes its folder structure and hard drive (default is 'vdi' as a second argume
 .PP
 
 .PP
-Definition at line 1056 of file mkgentoo\&.sh\&.
+Definition at line 1243 of file mkgentoo\&.sh\&.
 .SS "generate_Gentoo ()"
 
 .PP
 Launch routines: fetch install IO, starge3 archive, create VM\&. 
 .PP
-Definition at line 1674 of file mkgentoo\&.sh\&.
+Definition at line 1909 of file mkgentoo\&.sh\&.
 .SS "get_options ()"
 
 .PP
 Parse command line\&. 
 .PP
-Definition at line 268 of file mkgentoo\&.sh\&.
+Definition at line 272 of file mkgentoo\&.sh\&.
 .SS "help_ ()"
 
 .PP
 Print usage to stdout\&. 
 .PP
-Definition at line 213 of file mkgentoo\&.sh\&.
+Definition at line 217 of file mkgentoo\&.sh\&.
 .SS "help_md ()"
 
 .PP
@@ -429,13 +446,13 @@ Definition at line 124 of file mkgentoo\&.sh\&.
 .PP
 Print help to html page\&. 
 .PP
-Definition at line 230 of file mkgentoo\&.sh\&.
+Definition at line 234 of file mkgentoo\&.sh\&.
 .SS "log_loop ()"
 
 .PP
 Loop log tags every minute and optionally plot virtual disk size\&. Customizable suing options: plot_color, plot_period, plot_position, plot_pause, plot_span 
 .PP
-Definition at line 1303 of file mkgentoo\&.sh\&.
+Definition at line 1538 of file mkgentoo\&.sh\&.
 .SS "main ()"
 
 .PP
@@ -448,7 +465,7 @@ Daemonize the part below generate_Gentoo when #VMTYPE is \fCheadless\fP so that 
 .PP
 
 .PP
-Definition at line 2032 of file mkgentoo\&.sh\&.
+Definition at line 2270 of file mkgentoo\&.sh\&.
 .SS "make_boot_from_livecd ()"
 
 .PP
@@ -473,13 +490,13 @@ Will be run in the ${VM} virtual machine
 .PP
 
 .PP
-Definition at line 844 of file mkgentoo\&.sh\&.
+Definition at line 1069 of file mkgentoo\&.sh\&.
 .SS "manpage ()"
 
 .PP
 Print help to man page\&. 
 .PP
-Definition at line 221 of file mkgentoo\&.sh\&.
+Definition at line 225 of file mkgentoo\&.sh\&.
 .SS "mount_live_cd ()"
 
 .PP
@@ -492,13 +509,13 @@ live CD is mounted under $VMPATH/mnt and rsync'd to $VMPATH/mnt2
 .PP
 
 .PP
-Definition at line 762 of file mkgentoo\&.sh\&.
+Definition at line 772 of file mkgentoo\&.sh\&.
 .SS "pdfpage ()"
 
 .PP
 Print help to pdf page\&. 
 .PP
-Definition at line 239 of file mkgentoo\&.sh\&.
+Definition at line 243 of file mkgentoo\&.sh\&.
 .SS "prepare_for_iso_vm ()"
 Short version of \fBadd_guest_additions_to_clonezilla_iso\fP when the ISO has already been pre-authored\&. 
 .PP
@@ -509,7 +526,7 @@ Installing the guest additions is a prerequisite to folder sharing between the I
 .PP
 
 .PP
-Definition at line 1992 of file mkgentoo\&.sh\&.
+Definition at line 2230 of file mkgentoo\&.sh\&.
 .SS "test_cli (cli)"
 
 .PP
@@ -530,7 +547,7 @@ Also checks type of argument against types described for \fBARR\fP
 .PP
 
 .PP
-Definition at line 454 of file mkgentoo\&.sh\&.
+Definition at line 458 of file mkgentoo\&.sh\&.
 .SS "test_cli_post ()"
 
 .PP
@@ -543,7 +560,7 @@ Check commanline coherence and incompatibilities\&.
 .PP
 
 .PP
-Definition at line 597 of file mkgentoo\&.sh\&.
+Definition at line 612 of file mkgentoo\&.sh\&.
 .SS "test_cli_pre ()"
 
 .PP
@@ -556,7 +573,7 @@ Check VirtualBox version and prepare commandline analysis\&.
 .PP
 
 .PP
-Definition at line 340 of file mkgentoo\&.sh\&.
+Definition at line 344 of file mkgentoo\&.sh\&.
 .SS "test_vm_running (vm)"
 
 .PP
@@ -574,13 +591,13 @@ Check if VM as first named argument exists and is running\&.
 .PP
 
 .PP
-Definition at line 990 of file mkgentoo\&.sh\&.
+Definition at line 1177 of file mkgentoo\&.sh\&.
 .SS "unmount_clonezilla_iso ()"
 
 .PP
 Unmount the clonezilla filesystem after exiting chroot\&. Restore the squashfs filesystem\&. 
 .PP
-Definition at line 1875 of file mkgentoo\&.sh\&.
+Definition at line 2113 of file mkgentoo\&.sh\&.
 .SS "validate_option (option)"
 
 .PP
@@ -598,7 +615,7 @@ true if legitimate option otherwise false\&.
 .PP
 
 .PP
-Definition at line 255 of file mkgentoo\&.sh\&.
+Definition at line 259 of file mkgentoo\&.sh\&.
 .SS "vbox_img_works ()"
 
 .PP
@@ -618,7 +635,7 @@ Currently vbox-img is broken for --stdout\&. Using guestfish as an alternative\&
 .PP
 
 .PP
-Definition at line 1608 of file mkgentoo\&.sh\&.
+Definition at line 1843 of file mkgentoo\&.sh\&.
 .SH "Variable Documentation"
 .PP 
 .SS "ARR"
