--- a/doc/man/man3/mkgentoo.sh.3
+++ b/doc/man/man3/mkgentoo.sh.3
@@ -1,4 +1,4 @@
-.TH "mkgentoo.sh" 3 "Tue Mar 2 2021" "Version 1.0" "mkg" \" -*- nroff -*-
+.TH "mkgentoo.sh" 3 "Mon Mar 15 2021" "Version 1.0" "mkg" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -55,9 +55,15 @@ mkgentoo.sh \- Process options, create Gentoo VirtualBox machine and optionally 
 .br
 .RI "Mount Gentoo/Clonezilla live CD and unsquashfs the GNU/linux system\&. "
 .ti -1c
+.RI "\fBmove_auxiliary_files\fP ()"
+.br
+.ti -1c
 .RI "\fBmake_boot_from_livecd\fP ()"
 .br
 .RI "Tweak the Gentoo minimal install CD so that the custom- made shell scripts and stage3 archive are included into the squashfs filesystem\&. "
+.ti -1c
+.RI "\fBprepare_bash_rc\fP ()"
+.br
 .ti -1c
 .RI "\fBtest_vm_running\fP (vm)"
 .br
@@ -228,7 +234,7 @@ you should have at least 55 GB of free disk space in the current directory or in
 Only create the VM and virtual disk, in debug mode, without R and set new passwords, for a French-language platform\&. Use 8 cores\&. 
 .PP
 .nf
- mkg language=fr minimal debug_mode ncpus=8
+ mkg vm_language=fr minimal debug_mode ncpus=8
 nonroot_user=ken passwd='util!Hx&32F' rootpasswd='Hk_32!_CD' cleanup=false
 
 .fi
@@ -250,20 +256,30 @@ ext_device="Sams" my_gentoo_image\&.iso
 
 .PP
 Definition in file \fBmkgentoo\&.sh\fP\&.
+.SH "Function Documentation"
+.PP 
+.SS "move_auxiliary_files ()"
+
+.PP
+Definition at line 1010 of file mkgentoo\&.sh\&.
+.SS "prepare_bash_rc ()"
+Prepare the \&.bashrc file by exporting the environment this will be placed under /root in the VM 
+.PP
+Definition at line 1146 of file mkgentoo\&.sh\&.
 .SH "Variable Documentation"
 .PP 
 .SS "Exported String ISOLINUX_DIR = isolinux"
 
 .PP
-Definition at line 802 of file mkgentoo\&.sh\&.
+Definition at line 950 of file mkgentoo\&.sh\&.
 .SS "Exported String LOG"
 
 .PP
-Definition at line 275 of file mkgentoo\&.sh\&.
+Definition at line 279 of file mkgentoo\&.sh\&.
 .SS "Exported String PATH = '${PATH}':'${VBPATH}'"
 
 .PP
-Definition at line 1158 of file mkgentoo\&.sh\&.
+Definition at line 1357 of file mkgentoo\&.sh\&.
 .SH "Author"
 .PP 
 Generated automatically by Doxygen for mkg from the source code\&.
