Toggle minimal_size default to true. Correct regression for R libs (full install).

--- a/mkg.1
+++ b/mkg.1
@@ -239,7 +239,7 @@ optional strings that may remain unspecified.
 .br
 .TS
 tab(@);
-cw(14.0n) cw(20.0n) cw(14.0n) cw(22.0n).
+cw(13.3n) lw(21.7n) cw(25.0n) cw(10.0n).
 T{
 Option
 T}@T{
@@ -722,7 +722,7 @@ T}@T{
 Remove kernel sources to minimize packaging.
 Not advised for personal use but OK for deployment and distribution.
 T}@T{
-[ false ]
+[ true ]
 T}@T{
 b
 T}
